(chores) camel-csv: test code cleanups
- use static
- modernize code